--- a/index.html
+++ b/index.html
@@ -8,43 +8,75 @@
   </head>
 
   <body>
-    <header class="page-header">
-      <div class='container'>Контакты в шапке</div>
+    <header class="page-header" 
+      <div class='container'><a class="header-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+        <a class="header-phone" href="tel:+79876543210">+7 987 654 32 10</a></div>
     </header>
-
+      
     <section class="hero-image">
      <div class='container'>  
              
     <h1 class="heading">Опознанный Енот</h1>
       <p>Junior верстальщик</p>
       </div>
+      <nav>
+        <div class="menu">
+        <ul class="main-menu">
+          <li><a href="#intro">Обомне</a></li>
+          <li><a href="#jobs">Мои работы</a></li>
+          <li><a href="#blog">Блог верстальщика</a></li>        
+        </ul>
+      </div>
+      </nav>
     </section>
-
-    <section class="intro">
-      <div class='container'>
-      <h2 class="subheading">Давайте познакомимся</h2>
+    >
+    <section class="intro">      
+      <h2 class="subheading"id="intro">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img class="avatar" src="files/1.jpg" width="200" height="200" alt="Фотография Неопознанного Енота"><br>      
+        <img src="files/4.png" width="400" alt="Фотография  Енота за работай">
+        <img src="files/3.png" width="450" alt="Фотография  Енота за работай">
+      </figure>
       <h3>Пара слов о себе</h3>
-      <p>Текст с парой слов о себе.</p>
+      <p >Приветствую, случайному посетителю моего блога. Я недавно закончил одни из известных курсов по верстке сайтов и теперь я я Junior верстальщик.
+        Уже зарегистрировался на всех известных фриланс биржах. <span class="red">ГОТОВ ПРИНИМАТЬ</span> ваши заказы, в любых объёмах, по самым высоким ценам!</p>
       <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
+      <ul class="best">
+        <li>Html верста</li>
+        <li>Нарезка макета сайта</li>
+
+      </ul>
+
+      <div class="skills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><div style="width: 60%;">60%</div></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><div style="width: 40%;">40%</div></dd>
+        </dl>
+      </div>
       </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="jobs">
       <div class='container'>
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
-
-      <h3>Блог начинающего верстальщика</h3>
+      <p>Небольшой ле динг о школе для начинающих.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
+      <h3 id="blog">Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </div>
     </section>
 
     <footer class="page-footer">
       <div class='container'>
-      Контакты в подвале
+        <a class="footer-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+        <a class="footer-phone" href="tel:+79876543210">+7 987 654 32 10</a>
       </div>
       </footer>
     </footer>
